--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (internal--before-with-seleted-window)
+	(internal--after-with-seleted-window): New functions.
+	(with-selected-window): Use them, to replace dependency on tty-top-frame.
+
 2012-08-12  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* progmodes/ruby-mode.el (ruby-mode-map): Remove unnecessary
