--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,10 @@
 2012-08-13  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* tar-mode.el (tar-header-data-end): Only ignore size for files of
+	type 1-6.
+	(tar-header-block-summarize, tar-get-descriptor): Handle pax
+	extended headers.
+
 	* files.el (hack-local-variables-filter): Remove useless eval.
 
 2012-08-13  Martin Rudalics  <rudalics@gmx.at>
