--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-13  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (internal--before-with-selected-window)
+	(internal--after-with-selected-window): Fix typo seleted->selected.
+	(with-selected-window): Adjust callers.
+	Reported by Dmitry Gutov <dgutov@yandex.ru>.
+
 2012-08-13  Bastien Guerry  <bzg@gnu.org>
 
 	* window.el (special-display-popup-frame): Small docstring
