--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-14  Chong Yidong  <cyd@gnu.org>
+
+	* automated/files.el: Test every combination of values for
+	enable-local-variables and enable-local-eval.
+
 2012-08-10  Glenn Morris  <rgm@gnu.org>
 
 	* automated/files.el (files-test-disable-local-variables): New test.
