--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-14  Chong Yidong  <cyd@gnu.org>
+
+	* hi-lock.el (hi-lock-mode): Do not unilaterally enable font lock.
+	(hi-lock-set-pattern): When deciding whether to use font lock or
+	overlays, look at font-lock-mode instead of font-lock-fontified
+	(Bug#12168).
+	(hi-lock-mode, hi-lock-line-face-buffer, hi-lock-unface-buffer)
+	(hi-lock-face-buffer, hi-lock-face-phrase-buffer): Doc fix.
+
 2012-08-14  Daiki Ueno  <ueno@unixuser.org>
 
 	* subr.el (internal--after-with-selected-window): Fix typo
