--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-14  Chong Yidong  <cyd@gnu.org>
+
+	* chartab.c (Fmap_char_table): Doc fix (Bug#12061).
+
+	* editfns.c (Fformat): Doc fix (Bug#12059).
+
 2012-08-14  Barry OReilly  <gundaetiapo@gmail.com>  (tiny change)
 
 	* keyboard.c (access_keymap_keyremap): Accept anonymous functions
