More doc fixes.
* lisp/minibuffer.el (read-file-name): Doc fix.

* character.c (Fcharacterp): Doc fix (Bug#12076).

* data.c (Findirect_variable): Doc fix (Bug#11040).

* editfns.c (Fsave_current_buffer): Doc fix (Bug#11542).

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-08-14  Chong Yidong  <cyd@gnu.org>
 
+	* minibuffer.el (read-file-name): Doc fix (Bug#10881).
+
 	* emacs-lisp/regexp-opt.el (regexp-opt-charset): Doc fix
 	(Bug#12085).
 
