--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-14  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Use bool for Emacs Lisp booleans.
+	* merge-gnulib (GNULIB_MODULES): Add stdbool.  This documents a
+	new direct dependency; stdbool was already being used indirectly
+	via other gnulib modules.
+
 2012-08-11  Glenn Morris  <rgm@gnu.org>
 
 	* bzrmerge.el (bzrmerge-resolve): Disable local eval:.
