--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-14  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/bytecomp.el (byte-compile-setq-default):
+	Optimize away setq-default with no args, as for setq.  (Bug#12195)
+
 2012-08-14  Chong Yidong  <cyd@gnu.org>
 
 	* minibuffer.el (read-file-name): Doc fix (Bug#10881).
