--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* building.texi (Debugger Operation): Correct and improve
+	documentation of the GUD Tooltip mode.
+
 2012-07-31  Chong Yidong  <cyd@gnu.org>
 
 	* emacs.texi: Fix ISBN (Bug#12080).
