--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -17,6 +17,7 @@
 	* files.el (hack-local-variables-filter): If an eval: form is not
 	known to be safe, and enable-local-variables is :safe, then ignore
 	the form totally, as is done for non-eval forms.  (Bug#12155)
+	This is CVE-2012-3479.
 
 2012-08-07  Chong Yidong  <cyd@gnu.org>
 
