--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-15  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* gtkutil.c (xg_get_font): Use pango_units_to_double.
+
 2012-08-15  Chong Yidong  <cyd@gnu.org>
 
 	* gtkutil.c (xg_get_font): Rename from xg_get_font_name.  When
