--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-15  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.2 released.
+
 2012-08-14  Ulrich Mueller  <ulm@gentoo.org>
 
 	* lib/gnulib.mk:
