--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-15  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.2 released.
+
 2012-07-31  Chong Yidong  <cyd@gnu.org>
 
 	* emacs.texi: Fix ISBN (Bug#12080).
