--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-15  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.2 released.
+
 2012-08-06  Eli Zaretskii  <eliz@gnu.org>
 
 	* functions.texi (Closures): Put the main index entry for
