--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-15  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.2 released.
+
 2012-08-15  Leo Liu  <sdl.web@gmail.com>
 
 	* net/rcirc.el (rcirc-split-message): Fix for buffer-local
