--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-15  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.2 released.
+
 2012-08-14  Glenn Morris  <rgm@gnu.org>
 
 	* eval.c (Fcalled_interactively_p): Doc fix.  (Bug#11747)
